Work around a crash when showing the CaptureSourceChooserDlg

BUG: 502576